--- a/style.css
+++ b/style.css
@@ -76,3 +76,89 @@ header nav ul{
     gap: 40px;
     flex-wrap: wrap;
 }
+
+.article-card{
+    background-color: #f4f5f7;
+    color: #0a111e;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.6);
+    padding: 16px;
+    border-radius: 8px;
+    width: 100%;
+}
+
+.article-heard{
+    display: flex;
+    justify-content: space-between;
+    margin: 8px;
+    font-weight: 200;
+}
+
+.article-title{
+    font-weight: 700;
+}
+
+.article-content{
+    line-height: 1.4;
+}
+
+.likebutton{
+    background: none;
+    border: none;
+    font-size: 1.5em;
+}
+
+@media (max-width:768px){
+
+body {
+    background-color: pink;
+ }
+ .article-heard{
+    font-size: 0.8em;
+ }
+ header, .articles{
+    padding: 40px;
+ }
+}
+
+
+/* noticias html */
+
+main{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 40px;
+    background-color: #a0aec0;
+}
+
+article{
+    background-color: #f4f5f7;
+    padding: 24px;
+    border-radius: 20px;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.6);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    color: #0a111e;
+}
+
+.news-body{
+    width: 750px;
+    font-size: 15px;
+    font-weight: normal;
+    line-height: 1.5em;
+    text-indent: 24px;
+}
+
+.news-highlight{
+font-size: 1.5em;
+text-align: center;
+font-style: oblique;
+}
+
+img{
+    width: 100%;
+    padding: 16px;
+}
