--- a/style.css
+++ b/style.css
@@ -138,7 +138,7 @@ article{
     border-radius: 20px;
     box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.6);
     display: flex;
-    align-items: center;
+ 
     justify-content: center;
     flex-direction: column;
     color: #0a111e;
@@ -161,4 +161,7 @@ font-style: oblique;
 img{
     width: 100%;
     padding: 16px;
+}
+article .noticia{
+    align-items: center;
 }
